# sdxl-end2end

./: ATTENTION_BENCHMARK.bat  BENCHMARK_FLASH_CFG1.bat  BENCHMARK_FLASH_CFG1.ps1  BENCHMARK_MATRIX.bat  BENCHMARK_MATRIX.ps1  BUILD_WINDOWS_CUDA13.bat  CMakeLists.txt  CMakeLists_CPU_REFERENCE.txt  COMFYUI_PARITY.md  CUDA_BACKEND_NOTES.md  FETCH_CUDNN_FRONTEND.bat  FLASH_ATTENTION_AUDIT.md  FP8_RUNTIME.md  INT8_CONVROT.md  INT8_RUNTIME_FIXES.md  OPTIMIZATION_NOTES.md  PATCH_VALIDATION.md  README.md  README_CPU_REFERENCE.md  RELEASE_NOTES_FLASH_ATTENTION.md  SAMPLERS_AND_SCHEDULERS.md  SAMPLER_SCHEDULER_COMMIT_NOTE.txt  SAMPLER_SCHEDULER_MATRIX.bat  SAMPLER_SCHEDULER_MATRIX.ps1  SERVER_PROTOCOL.md  SOURCE_MANIFEST.sha256  THIRD_PARTY_NOTICES.md  VALIDATION.md
.github/dpmpp-patch/: part00.b64  part02.b64  part03.b64  part04.b64  part05.b64  part06.b64
.github/workflows/: export-gits-source.yml  export-project.yml  fetch-comfy-reference.yml  sampler-scheduler-bootstrap.yml
include/sdxl/: denoiser.hpp  gits_schedule_data.hpp  json.hpp  model.hpp  safetensors.hpp  scheduler.hpp  sdxl.hpp  text_encoder.hpp  tokenizer.hpp  unet.hpp
include/sdxl/cuda/: async_image_writer.hpp  denoise_graph.hpp  denoiser.hpp  engine.hpp  image.hpp  ops.hpp  profiler.hpp  runtime.hpp  tensor.hpp  text_encoder.hpp  unet.hpp  vae.hpp  weights.hpp
include/sdxl/resources/: sdxl_tokenizer_data.hpp
reference/: README.md  creapromptHyperSDXL_v1.2_FULL_ConvRot_INT8_keys.txt
src/: attention_bench.cu  cuda_main.cpp  denoise_main.cpp  denoiser.cpp  gits_schedule_data.cpp  json.cpp  main.cpp  model.cpp  png.cpp  safetensors.cpp  scheduler.cpp  sdxl.cpp  server_main.cpp  text_encoder.cpp  text_main.cpp  tokenizer.cpp  unet.cpp
src/cuda/: async_image_writer.cpp  cudnn_sdpa.cpp  cudnn_sdpa.hpp  denoise_graph.cpp  denoiser.cpp  engine.cpp  flash_attention_sm80.cu  flash_attention_sm80.hpp  fp8_internal.hpp  fp8_kernels.cu  image.cu  int8_convrot.cu  int8_convrot.hpp  ops_blas.cpp  ops_kernels.cu  profiler.cpp  runtime.cpp  runtime_internal.hpp  tensor.cu  text_encoder.cpp  unet.cpp  vae.cpp  weights.cu
src/resources/: sdxl_tokenizer_data.cpp
tests/: builtin_tokenizer_test.cpp  int8_key_layout_test.cpp  int8_metadata_test.cpp  scheduler_parity_test.cpp  text_encoder_test.cpp  tokenizer_test.cpp  unet_scheduler_test.cpp
tests/cuda/: cuda_ops_test.cu
